FIX: Link alignment.

--- a/assets/application.css
+++ b/assets/application.css
@@ -1246,6 +1246,14 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .leading-1\.25 {
+    --tw-leading: calc(var(--spacing) * 1.25);
+    line-height: calc(var(--spacing) * 1.25);
+  }
+  .leading-\[1\.25\] {
+    --tw-leading: 1.25;
+    line-height: 1.25;
+  }
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
